# file-drive

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  pytest.ini
.github/ISSUE_TEMPLATE/: user-story.md
.github/workflows/: ci-cd.yaml  ci-cd.yml  docker-build.yml  docker-image-build.yaml  test.yml
auth/: auth.py
configs/: database.py  settings.py
deploy/: cloud-run.sh  deployments.yaml  docker-compose.prod.yml  enable_apis.sh
migration/: env.py
models/: file.py  insight.py  mixins.py  user.py
repositories/: file.py  insight.py  user.py
routers/: auth.py  files.py  health_checks.py  insights.py  users.py
schemas/: auth.py  file.py  health_check.py  insight.py  pagination.py  user.py
security/: password.py
services/: file.py  gemini.py  insight.py  user.py
tests/: common.py  conftest.py
tests/integration/: test_auth.py  test_auth_routers.py  test_file_routers.py  test_health_check_routes.py  test_users_routers.py
tests/unit/: test_auth.py  test_password.py  test_user_service.py
