[tool.poetry]
name = "file-drive"
version = "0.1.0"
description = ""
authors = ["Michael <mjthecoder53161@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.115.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
google-cloud-storage = "^2.18.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
