[tool.poetry]
name = "file-drive"
version = "0.1.0"
description = ""
authors = ["Michael <mjthecoder53161@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
google-cloud-storage = "^2.18.2"
python-multipart = "^0.0.12"
python-jose = "^3.3.0"
passlib = "^1.7.4"
vertexai = "^1.69.0"
pydantic-settings = "^2.5.2"
python-dotenv = "^1.0.1"
pydantic = {extras = ["email"], version = "^2.9.2"}
fastapi = "^0.115.0"
httpx = "^0.27.2"
uvicorn = "^0.31.0"
gunicorn = "^23.0.0"
asyncpg = "^0.29.0"
alembic = "^1.13.3"
pytz = "^2024.2"
google-cloud-aiplatform = "^1.69.0"
bcrypt = "^4.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
faker = "^30.3.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.24.0"
aiosqlite = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[pytest]
addopts = ["--cov=app", "--cov-report=term-missing", "--cov-report=html"]
